--- a/FocusMap/Info.plist
+++ b/FocusMap/Info.plist
@@ -26,6 +26,7 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
